--- a/scss/homenet.scss
+++ b/scss/homenet.scss
@@ -38,6 +38,7 @@
 
 // Homenet Customs
 @import "homenet/homenet-type";
+@import "homenet/homenet-main";
 @import "homenet/homenet-settings";
 @import "homenet/homenet-additional";
 @import "homenet/homenet-navbar";
