--- a/scss/homenet/_homenet-hero.scss
+++ b/scss/homenet/_homenet-hero.scss
@@ -364,6 +364,7 @@
       position: relative;
       z-index: 900;
       height: 100%;
+      width: 100%;
       display: flex;
       flex-direction: column;
       align-items: left;
