--- a/scss/homenet/_homenet-type.scss
+++ b/scss/homenet/_homenet-type.scss
@@ -1,89 +1,331 @@
-//
-// Text Block
-//
+/*
+################
+Body
+################
+*/
+
+
+* {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+body.en {
+    font-size: 1rem;
+}
+
+body.zh {
+    font-size: 1.0625rem;
+    font-family: $font-zh;
+}
+
+body.en .zh {
+    font-family: $font-zh;
+}
 
 body p {
-  font-family: $font-secondary;
-  font-weight: $font-weight-400;
-  letter-spacing: 0.01px;
+    font-family: $font-secondary;
+    font-weight: $font-weight-400;
+    letter-spacing: 0.01px;
 }
 
 body.zh p {
-  font-family: $font-zh;
+    font-family: $font-zh;
 }
 
-//
-// Headings
-//
+
+/*
+################
+Headings
+################
+*/
 
 h1,
-.h1 { font-size: $h1-font-size-sm; }
+.h1 {
+    font-size: $h1-font-size-sm;
+}
+
 h2,
-.h2 { font-size: $h2-font-size-sm; }
+.h2 {
+    font-size: $h2-font-size-sm;
+}
+
 h3,
-.h3 { font-size: $h3-font-size-sm; }
+.h3 {
+    font-size: $h3-font-size-sm;
+}
+
 h4,
-.h4 { font-size: $h4-font-size-sm; }
+.h4 {
+    font-size: $h4-font-size-sm;
+}
+
 h5,
-.h5 { font-size: $h5-font-size-sm; }
+.h5 {
+    font-size: $h5-font-size-sm;
+}
+
 h6,
-.h6 { font-size: $h6-font-size-sm; }
-
-@include media-breakpoint-up(md) {
-  h1,
-  .h1 { font-size: $h1-font-size; }
-  h2,
-  .h2 { font-size: $h2-font-size; }
-  h3,
-  .h3 { font-size: $h3-font-size; }
-  h4,
-  .h4 { font-size: $h4-font-size; }
-  h5,
-  .h5 { font-size: $h5-font-size; }
-  h6,
-  .h6 { font-size: $h6-font-size; }
+.h6 {
+    font-size: $h6-font-size-sm;
 }
 
-// Type display classes
+@include media-breakpoint-up(md) {
+
+    h1,
+    .h1 {
+        font-size: $h1-font-size;
+    }
+
+    h2,
+    .h2 {
+        font-size: $h2-font-size;
+    }
+
+    h3,
+    .h3 {
+        font-size: $h3-font-size;
+    }
+
+    h4,
+    .h4 {
+        font-size: $h4-font-size;
+    }
+
+    h5,
+    .h5 {
+        font-size: $h5-font-size;
+    }
+
+    h6,
+    .h6 {
+        font-size: $h6-font-size;
+    }
+}
+
+
+/*
+################
+Homenet Design Type
+################
+*/
+
+/* General */
+body.en .textarea {
+    font-family: $font-secondary;
+}
+
+/* Buttons */
+body.en .button-submit {
+    font-family: $font-secondary;
+}
+
+/* Buttons */
+body.en .button-submit,
+body.en .button-contact,
+body.en .button-action,
+body.en .button-msg-send,
+body.en .button-popup,
+body.en .button-search,
+body.en .search-btn {
+    font-family: $font-secondary;
+}
+
+/* Homepage */
+body.en .search_engine {
+    font-family: $font-secondary;
+}
+
+/* Listing Pages */
+body.en .listing-name,
+body.en .location,
+body.en .price-container,
+body.en .listing-info,
+body.en .listing-source-box .source,
+body.en .listing-source-box .name,
+body.en .listing-source-box .call,
+body.en .listing-source-box .enquiry_button {
+    font-family: $font-secondary;
+}
+
+body.en .listing-card-small {
+    font-family: $font-secondary;
+}
+
+/* Search Pages */
+body.en .map-listing-card {
+    font-family: $font-secondary;
+}
+
+body.en .search-page {
+    font-family: $font-secondary;
+}
+
+body.en .search-page .neighbourhood {
+    font-family: $font-family-base;
+}
+
+/* Profile Pages */
+body.en .profile-page {
+    font-family: $font-secondary;
+}
+
+body.en .profile-page .veri_head {
+    font-family: $font-family-base;
+}
+
+/* Building Pages */
+body.en .building-page {
+    font-family: $font-secondary;
+}
+
+body.en .building-page .building-card .address,
+body.en .building-page .building-card .feature,
+    {
+    font-family: $font-family-base;
+}
+
+/* District Pages */
+body.en .district-page {
+    font-family: $font-secondary;
+}
+
+/* Account */
+body.en .account .profile .name,
+body.en .account .profile .avatar,
+body.en .account .profile .textarea {
+    font-family: $font-secondary;
+}
+
+body.en .account .profile .lang .zh {
+    font-weight: 500;
+}
+
+/* Account Dashboard */
+body.en .account .dashboard .name,
+body.en .account .dashboard .edit,
+body.en .account .dashboard .top_cell .count,
+body.en .account .dashboard .top_cell .live {
+    font-family: $font-secondary;
+}
+
+/* Account Listing Backend*/
+body.en .account .listing-process h1,
+body.en .account .listing-process .step,
+body.en .account .listing-process .placeholder,
+body.en .account .listing-process .note_advice,
+body.en .account .listing-process .input {
+    font-family: $font-secondary;
+}
+
+/* Account Listing Management*/
+body.en .account .listing-manage .side_counts .count,
+body.en .account .listing-manage .sticky_progress,
+body.en .account .listing-manage .listing.table,
+body.en .account .listing-manage .note_advice,
+body.en .account .listing-manage .progress_divide {
+    font-family: $font-secondary;
+}
+
+body.en .account .listing-manage .listing.table .details,
+body.en .account .listing-manage .listing.table .note,
+body.en .account .listing-manage .listing.table .delete,
+body.en .account .listing-manage .listing.table .edit,
+body.en .account .listing-manage .listing.table .incomplete {
+    font-family: $font-family-base;
+}
+
+/* Account Listing Chat*/
+body.en .account .chat .menu,
+body.en .account .chat .message .phone,
+body.en .account .chat .message .msg,
+body.en .account .chat .chat_frame,
+body.en .account .chat .chatting_to,
+body.en .account .chat .send_button {
+    font-family: $font-secondary;
+}
+
+body.en .account .chat .menu .title,
+body.en .account .chat .chat_frame .listing_type,
+body.en .account .chat .chatting_to .account,
+body.en .account .chat .chatting_to .divider {
+    font-family: $font-family-base;
+}
+
+/* Others */
+body.en .agent_box,
+body.en .new_msg_box,
+body.en .settings_box,
+body.en .popup_box {
+    font-family: $font-secondary;
+}
+
+body.en .agent_box .agent {
+    font-family: $font-family-base;
+}
+
+/* Zh Corrections */
+body.zh .listing-page .listing-card-small .details,
+body.zh .listing-page .details .feet {
+    font-weight: 400;
+}
+
+/*
+################
+Content Page Themes
+################
+*/
+
 .display-1 {
-  font-size: $display1-size-xs;
+    font-size: $display1-size-xs;
 }
+
 .display-2 {
-  font-size: $display2-size-xs;
+    font-size: $display2-size-xs;
 }
+
 .display-3 {
-  font-size: $display3-size-xs;
+    font-size: $display3-size-xs;
 }
+
 .display-4 {
-  font-size: $display4-size-xs;
+    font-size: $display4-size-xs;
 }
+
 @include media-breakpoint-up(md) {
-  .display-1 {
-    font-size: $display1-size-md;
-  }
-  .display-2 {
-    font-size: $display2-size-md;
-  }
-  .display-3 {
-    font-size: $display3-size-md;
-  }
-  .display-4 {
-    font-size: $display4-size-md;
-  }
+    .display-1 {
+        font-size: $display1-size-md;
+    }
+
+    .display-2 {
+        font-size: $display2-size-md;
+    }
+
+    .display-3 {
+        font-size: $display3-size-md;
+    }
+
+    .display-4 {
+        font-size: $display4-size-md;
+    }
 }
+
 @include media-breakpoint-up(xl) {
-  .display-1 {
-    font-size: $display1-size-xl;
-  }
-  .display-2 {
-    font-size: $display2-size-xl;
-  }
-  .display-3 {
-    font-size: $display3-size-xl;
-  }
-  .display-4 {
-    font-size: $display4-size-xl;
-  }
+    .display-1 {
+        font-size: $display1-size-xl;
+    }
+
+    .display-2 {
+        font-size: $display2-size-xl;
+    }
+
+    .display-3 {
+        font-size: $display3-size-xl;
+    }
+
+    .display-4 {
+        font-size: $display4-size-xl;
+    }
 }
 
 //
@@ -91,92 +333,98 @@ h6,
 //
 
 .blockquote {
-  margin-bottom: ($spacer * 2);
-  font-size: $blockquote-font-size;
-  font-style: italic;
-  font-weight: $font-weight-500;
-  line-height: $blockquote-line-height;
-  color: $blockquote-color;
+    margin-bottom: ($spacer * 2);
+    font-size: $blockquote-font-size;
+    font-style: italic;
+    font-weight: $font-weight-500;
+    line-height: $blockquote-line-height;
+    color: $blockquote-color;
 }
+
 .blockquote-footer {
-  margin-top: $blockquote-footer-margin;
-  font-size: $blockquote-footer-font-size;
-  font-style: normal;
-  font-weight: $font-weight-base;
+    margin-top: $blockquote-footer-margin;
+    font-size: $blockquote-footer-font-size;
+    font-style: normal;
+    font-weight: $font-weight-base;
 
-  &::before {
-    position: relative;
-    top: -4px;
-    display: inline-block;
-    width: 12px;
-    height: 1px;
-    margin-right: $blockquote-footer-margin;
-    content: "";
-    background-color: lighten($blockquote-color, 60%);
-  }
+    &::before {
+        position: relative;
+        top: -4px;
+        display: inline-block;
+        width: 12px;
+        height: 1px;
+        margin-right: $blockquote-footer-margin;
+        content: "";
+        background-color: lighten($blockquote-color, 60%);
+    }
 }
+
 .blockquote-light-1 {
-  color: $white;
-
-  .blockquote-footer {
-    color: $white-50;
-
-    &::before {
-      background-color: $white-50;
-    }
-  }
-}
-.blockquote-light-2 {
-  color: $white;
-
-  .blockquote-footer {
-    color: $white-75;
-
-    &::before {
-      background-color: $white-75;
-    }
-  }
-
-  &.blockquote-3 {
-    /* stylelint-disable-next-line declaration-no-important */
-    border-color: $white !important;
-  }
-}
-.blockquote-2 {
-  @extend .blockquote;
-  padding: .1875rem 1.5625rem .375rem;
-  /* stylelint-disable declaration-no-important */
-  border-color: rgba($black, .07) !important;
-  border-width: ($border-width + 4) !important;
-
-  &.blockquote-light-1 {
-    border-color: rgba($white, .16) !important;
-  }
-
-  &.blockquote-light-2 {
-    border-color: rgba($white, .5) !important;
-  }
-  /* stylelint-enable */
-}
-.blockquote-3 {
-  @extend .blockquote;
-  padding: 1.437rem 1.5625rem 1.625rem;
-  background-color: $white;
-  /* stylelint-disable */
-  border-color: $main-color !important;
-  border-width: ($border-width + 4) !important;
-  /* stylelint-enable */
-
-  &.blockquote-light-1,
-  &.blockquote-light-2 {
-    background-color: lighten($black, 6.5%);
+    color: $white;
 
     .blockquote-footer {
-      color: $white-50;
+        color: $white-50;
 
-      &::before {
-        background-color: $white-50;
-      }
+        &::before {
+            background-color: $white-50;
+        }
     }
-  }
+}
+
+.blockquote-light-2 {
+    color: $white;
+
+    .blockquote-footer {
+        color: $white-75;
+
+        &::before {
+            background-color: $white-75;
+        }
+    }
+
+    &.blockquote-3 {
+        /* stylelint-disable-next-line declaration-no-important */
+        border-color: $white !important;
+    }
+}
+
+.blockquote-2 {
+    @extend .blockquote;
+    padding: .1875rem 1.5625rem .375rem;
+    /* stylelint-disable declaration-no-important */
+    border-color: rgba($black, .07) !important;
+    border-width: ($border-width + 4) !important;
+
+    &.blockquote-light-1 {
+        border-color: rgba($white, .16) !important;
+    }
+
+    &.blockquote-light-2 {
+        border-color: rgba($white, .5) !important;
+    }
+
+    /* stylelint-enable */
+}
+
+.blockquote-3 {
+    @extend .blockquote;
+    padding: 1.437rem 1.5625rem 1.625rem;
+    background-color: $white;
+    /* stylelint-disable */
+    border-color: $main-color !important;
+    border-width: ($border-width + 4) !important;
+    /* stylelint-enable */
+
+    &.blockquote-light-1,
+    &.blockquote-light-2 {
+        background-color: lighten($black, 6.5%);
+
+        .blockquote-footer {
+            color: $white-50;
+
+            &::before {
+                background-color: $white-50;
+            }
+        }
+    }
 }
