--- a/scss/homenet.scss
+++ b/scss/homenet.scss
@@ -7,6 +7,45 @@
 // Import Bootstrap
 @import "../node_modules/bootstrap/scss/bootstrap";
 
+// Homenet Customs
+
+/*Currently Applied Used for Design*/
+@import "homenet/homenet-type";
+@import "homenet/homenet-main";
+@import "homenet/homenet-buttons";
+@import "homenet/homenet-navbar";
+@import "homenet/homenet-footer";
+
+/*To be futher customized - general pages, elements  & effect*/
+@import "homenet/homenet-settings";
+@import "homenet/homenet-additional";
+@import "homenet/homenet-hero";
+@import "homenet/homenet-content-pages";
+@import "homenet/homenet-content-sections";
+@import "homenet/homenet-simple_sections";
+@import "homenet/homenet-info-pages";
+@import "homenet/homenet-titles";
+@import "homenet/homenet-lists";
+@import "homenet/homenet-flip-cards";
+@import "homenet/homenet-bubble-quote";
+@import "homenet/homenet-avatar-dropdown";
+
+// Homenet Elements
+@import "homenet/homenet-portfolio";
+@import "homenet/homenet-tabs";
+@import "homenet/homenet-icon_boxes";
+@import "homenet/homenet-services-items";
+@import "homenet/homenet-members-sliders";
+@import "homenet/homenet-clients";
+
+// Homenet Animations
+@import "homenet/homenet-agent-pop-effect";
+
+// Homenet Effects
+@import "homenet/homenet-swiper";
+@import "homenet/homenet-counters";
+
+
 // General UI Kit
 @import "mixins";
 @import "partials/reboot";
@@ -35,40 +74,6 @@
 @import "utilities/colors";
 @import "utilities/shadows";
 @import "utilities/text";
-
-// Homenet Customs
-@import "homenet/homenet-type";
-@import "homenet/homenet-main";
-@import "homenet/homenet-settings";
-@import "homenet/homenet-additional";
-@import "homenet/homenet-navbar";
-@import "homenet/homenet-footer";
-@import "homenet/homenet-hero";
-@import "homenet/homenet-content-pages";
-@import "homenet/homenet-content-sections";
-@import "homenet/homenet-simple_sections";
-@import "homenet/homenet-info-pages";
-@import "homenet/homenet-titles";
-@import "homenet/homenet-lists";
-@import "homenet/homenet-flip-cards";
-@import "homenet/homenet-bubble-quote";
-@import "homenet/homenet-avatar-dropdown";
-
-// Homenet Elements
-@import "homenet/homenet-buttons";
-@import "homenet/homenet-portfolio";
-@import "homenet/homenet-tabs";
-@import "homenet/homenet-icon_boxes";
-@import "homenet/homenet-services-items";
-@import "homenet/homenet-members-sliders";
-@import "homenet/homenet-clients";
-
-// Homenet Animations
-@import "homenet/homenet-agent-pop-effect";
-
-// Homenet Effects
-@import "homenet/homenet-swiper";
-@import "homenet/homenet-counters";
 
 // Extra components
 @import "extras/title";
