--- a/scss/_theming.scss
+++ b/scss/_theming.scss
@@ -21,7 +21,8 @@ $account-font:          #343e5c;
 $info-pg-cell-bg:       #405256;
 
 $speech-shadow:         0px 0px 10px -1px rgba(0, 13, 38, 0.10);
-$cell-shadow:           -4px 4px 18px -3px rgba(0, 0, 0, 0.18);
+$cell-shadow:           -3px 3px 9px -3px rgba(0, 0, 0, 0.3);
+$infobox-shadow:        -4px 4px 18px -3px rgba(0, 0, 0, 0.18);
 $pop-up-shadow:         0px 10px 30px 0px rgba(0, 0, 0, 0.5);
 
  // Homenet Main UI Background Colors - Footer and Navbar
