--- a/assets/css/card-concise.css
+++ b/assets/css/card-concise.css
@@ -1,177 +1,93 @@
-/* other */
-.card {
-    margin-bottom: 2rem;
-    border-radius: 0.3125rem;
-}
-
-.card-img-wrapper {
-    overflow: hidden;
-}
-.card-title a {
-    color: #202020;
-    transition: all 0.2s ease-in-out;
-}
-
-.card-title a:hover {
-    color: #85c3ae;
-    text-decoration: none;
-}
-
-.card-title-light-2 a {
-    color: #fff !important;
-}
-.card-img {
-    border-radius: 0.3125rem;
-}
-
-
-.card-blog-entry .card-title {
-    margin: 0.75rem 0 0.375rem;
-    font-size: 1.125rem;
-    font-weight: 700;
-}
-
-
-
-#font2 {
-    font-family: var(--secondary-font), var(--font-family-sans-serif);
-}
-
-
-/* rounded img */
-
 .listing-card {
     position: relative;
     overflow: hidden;
-    border-top-left-radius: 0.3125rem;
-    border-top-right-radius: 0.3125rem;
+    margin-bottom: 2rem;
+    border-radius: 0.3125rem;
+    box-shadow: 0 0.42rem 1.22rem rgba(0, 0, 0, 0.12);
+    border: 0;
 }
-
-.listing-card-img {
+.listing-img {
+    display: block;
     position: relative;
     overflow: hidden;
-    border-top-left-radius: 0.3125rem;
-    border-top-right-radius: 0.3125rem;
 }
-
-.listing-card-img::after {
+.listing-img::after {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     content: "";
-    background-color: rgba(0, 0, 0, 0.65);
+    background-color: rgba(0, 0, 0, 0.35);
     opacity: 0;
     transition: opacity 0.2s ease-in-out;
 }
-
-.listing-card-img:hover::after {
+.listing-img:hover::after {
     opacity: 1;
 }
-
-.listing-card-img {
-    display: block;
-}
-
-.listing-card-img::after {
-    background-color: rgba(0, 0, 0, 0.35);
-}
-
-.listing-card-img-top {
+.listing-img-top {
     width: 100%;
     border-top-left-radius: 0.3125rem;
     border-top-right-radius: 0.3125rem;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-.listing-card-footer:last-child {
-    border-radius: 0 0 0.3125rem 0.3125rem;
+.listing-info{
+        animation: fadein 0.5s ease-in-out;
+    -moz-animation: fadein 1.3s ease-in-out;
+    -webkit-animation: fadein 0.3s ease-in-out;
+    -o-animation: fadein 1.3s ease-in-out;
+    padding: 0 4% 5% 4%;
 }
-
-.listing-card-footer {
-    padding: 1rem 1.875rem;
+.listing-btm {
+  /*  padding: 1rem 1.875rem; */
 }
-
-.listing-card .building_name {
+.listing-card .bdg-name {
     font-size: 20px;
     font-weight: 600;
     color: #373737;
     letter-spacing: -0.3px;
     line-height: 1.3;
     display: block;
+        white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
-
-.listing-card .neighbourhood {
+.listing-card .hood {
     font-size: 12px;
     color: #000;
     display: block;
     padding: 5px 0px;
 }
-
 .listing-card .source {
-    font-size: 11.5px;
-    font-weight: 700;
+    font-size: 11px;
+    font-weight: 600;
     letter-spacing: -0.2px;
     padding: 5px 0px;
     color: #373737;
     display: block;
+    text-transform: uppercase;
 }
-
 .listing-card .layout {
     padding-right: 4px;
     display: inline-block;
+    min-width: 50px;
+    border-right: solid 1px #000;
 }
-
 .listing-card .size {
     padding: 0px 6px;
     display: inline-block;
-    line-height: 19px;
+    line-height: 15.5px;
     letter-spacing: -0.1px;
 }
-
-.listing-card .size span.number {
+.listing-card .size span.num {
     letter-spacing: -0.1px;
 }
-
-.listing-card .size span.feet {
+.listing-card .size span.ft {
     font-size: 13px;
 }
-
-.listing-card .size span.square {
+.listing-card .size span.sq {
     font-size: 16px;
 }
-
 .listing-card .date {
     font-size: 11.5px;
     color: #383838;
 }
-
-.listing-card .size:before {
-    content: ' ';
-    display: inline-block;
-    width: 1px;
-    height: 19px;
-    background-color: #000;
-    margin-right: 5px;
-    transition: all .5s ease-in-out;
-    -webkit-transition: all .5s ease-in-out;
-    top: 3px;
-    position: relative;
-    animation: fadein 1.3s;
-    -moz-animation: fadein 1.3s;
-    -webkit-animation: fadein 1.3s;
-    -o-animation: fadein 1.3s;
-}
-
-
