--- a/scss/_theming.scss
+++ b/scss/_theming.scss
@@ -1045,6 +1045,12 @@ $info-box-4-caption-py:                 5rem;
   /* Functional Colors */
   // Default black color
   --black_default: #232323;
+
+  /* ## ## ## ## ## ## ## ## ## ## */
+
+ // Homenet Main UI Background Colors - Footer and Navbar
+--ui-color-main: #2d2e33;
+--ui-color-sub: #2c393c;
+
 }
 
-/* ## ## ## ## ## ## ## ## ## ## */
