--- a/scss/homenet.scss
+++ b/scss/homenet.scss
@@ -5,6 +5,22 @@
 @import "theming";
 
 // Import Bootstrap
+// 
+// 
+//*
+@import "../node_modules/bootstrap/scss/functions";
+@import "../node_modules/bootstrap/scss/variables";
+@import "../node_modules/bootstrap/scss/mixins";
+@import "../node_modules/bootstrap/scss/root";
+@import "../node_modules/bootstrap/scss/reboot";
+@import "../node_modules/bootstrap/scss/type";
+//@import "../node_modules/bootstrap/scss/images";
+//@import "../node_modules/bootstrap/scss/code";
+@import "../node_modules/bootstrap/scss/grid";
+@import "../node_modules/bootstrap/scss/breadcrumb";
+@import "../node_modules/bootstrap/scss/transitions";
+@import "../node_modules/bootstrap/scss/utilities";
+/*
 @import "../node_modules/bootstrap/scss/functions";
 @import "../node_modules/bootstrap/scss/variables";
 @import "../node_modules/bootstrap/scss/mixins";
@@ -43,14 +59,16 @@
 @import "../node_modules/bootstrap/scss/utilities";
 @import "../node_modules/bootstrap/scss/print";
 
+
+
 // Homenet Customs
 
 /*Currently Applied Used for Design*/
 @import "homenet/homenet-type";
 @import "homenet/homenet-main";
 @import "homenet/homenet-buttons";
-@import "homenet/homenet-navbar";
-@import "homenet/homenet-footer";
+//@import "homenet/homenet-navbar";
+//@import "homenet/homenet-footer";
 
 /*To be futher customized - general pages, elements  & effect*/
 @import "homenet/homenet-settings";
