--- a/scss/homenet/_homenet-type.scss
+++ b/scss/homenet/_homenet-type.scss
@@ -160,7 +160,8 @@ body.en .listing-card {
 }
 
 body.en .listing-card .hood,
-body.en .listing-card .source {    
+body.en .listing-card .source,
+body.en .listing-card .cur {  
     font-family: $font-family-base;
 }
 
